--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node $NODE_DEBUG_OPTION ./src/index.js",
+    "test": "nyc --reporter=text-summary mocha --timeout 10000 ./src/api/**/**.spec.js  --exit"
   },
   "author": "",
   "license": "MIT",
@@ -21,5 +22,11 @@
     "morgan": "^1.9.1",
     "swagger-jsdoc": "^3.2.6",
     "swagger-ui-express": "^4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "sinon": "^7.2.3"
   }
 }
